<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".MoviesDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_close_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:contentDescription="@string/close_affordance"
            android:padding="16dp"
            android:src="@drawable/ic_outline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_close_movie_details"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="125dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/movie_poster"
                        android:elevation="3dp"
                        app:layout_constraintDimensionRatio="2:3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/movie_title_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@+id/tv_movie_rating"
                        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                        app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="@string/_10"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_rating"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tv_movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/movie_rating_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_wishlist_toggle"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/remove_from_wishlist"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_watch_trailer"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/watch_trailer"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                        app:layout_constraintTop_toBottomOf="@+id/btn_wishlist_toggle" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_watch_trailer" />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/short_description"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_movie_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/movie_description_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_description" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/details"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider6" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/genre"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView12" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/released_date"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_genre" />

                    <TextView
                        android:id="@+id/tv_movie_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/movie_genre_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        app:layout_constraintStart_toEndOf="@+id/textView13"
                        app:layout_constraintTop_toTopOf="@+id/textView13" />

                    <TextView
                        android:id="@+id/tv_movie_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/movie_release_date_placeholder"
                        app:layout_constraintStart_toEndOf="@+id/textView14"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>